force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Template__c/cgcloud__CP_Pricing_Condition_Template__c.object-meta.xml
<CustomObject>
    <description>The pricing condition template object is used to define what is calculated in a step of a calculation schema</description>
    <label>Pricing Condition Template</label>
    <nameField>
        <label>Pricing Condition Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Condition Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>