force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Template__c/fields/cgcloud__Base__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Base__c</fullName>
    <description>Defines the item or product attribute that will be used as base for several pricing functionality like scale determination or condition value distribution to items.</description>
    <label>Base</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Volume</fullName>
            </value>
            <value>
                <fullName>Weight</fullName>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
            <value>
                <fullName>Quantity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>