force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Template__c/fields/cgcloud__Condition_Level__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Condition_Level__c</fullName>
    <description>Defines if the complex pricing condition type describes header level or item level conditions.</description>
    <label>Condition Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OrderHeader</fullName>
            </value>
            <value>
                <fullName>OrderItem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>