force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Template__c/fields/cgcloud__Decimal_Places__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Decimal_Places__c</fullName>
    <description>Defines the number of remaining decimal places if rounding applies.</description>
    <label>Decimal Places</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>