force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Template__c/fields/cgcloud__Distribute_To_Item__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Distribute_To_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if the found/calculated condition value will be distributed to the sales document items.</description>
    <inlineHelpText>A Header Condition can only be distributed to Items in very specific order scenarios. If distribution is required it is necessary to align the behavior with CG Cloud.</inlineHelpText>
    <label>Distribute To Item</label>
    <type>Checkbox</type>
</CustomField>