force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Template__c/fields/cgcloud__Item_Grouping__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Item_Grouping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies that the condition applies to a group of items (group condition).</description>
    <label>Item Grouping</label>
    <type>Checkbox</type>
</CustomField>