force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Template__c/fields/cgcloud__Mandatory__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>-- No longer used -- Moved to CP_Calculation_Schema_Step__c</description>
    <label>Mandatory</label>
    <type>Checkbox</type>
</CustomField>