force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Template__c/fields/cgcloud__Manual__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Manual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if the condition type requires manual editing of condition.</description>
    <label>Manual</label>
    <type>Checkbox</type>
</CustomField>