force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Template__c/fields/cgcloud__Manual_Source_Attribute__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Manual_Source_Attribute__c</fullName>
    <description>Defines from which field the manual condition is taken.</description>
    <inlineHelpText>Define from which field the manual condition is taken.</inlineHelpText>
    <label>Manual Source Attribute</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PricingInfo1</fullName>
                <label>Pricing Info 1</label>
            </value>
            <value>
                <fullName>PricingInfo2</fullName>
                <label>Pricing Info 2</label>
            </value>
            <value>
                <fullName>PricingInfo3</fullName>
                <label>Pricing Info 3</label>
            </value>
            <value>
                <fullName>PricingInfo4</fullName>
                <label>Pricing Info 4</label>
            </value>
            <value>
                <fullName>PricingInfo5</fullName>
                <label>Pricing Info 5</label>
            </value>
            <value>
                <fullName>PricingInfo6</fullName>
                <label>Pricing Info 6</label>
            </value>
            <value>
                <fullName>PricingInfo7</fullName>
                <label>Pricing Info 7</label>
            </value>
            <value>
                <fullName>PricingInfo8</fullName>
                <label>Pricing Info 8</label>
            </value>
            <value>
                <fullName>PricingInfo9</fullName>
                <label>Pricing Info 9</label>
            </value>
            <value>
                <fullName>PricingInfo10</fullName>
                <label>Pricing Info 10</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>