force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Template__c/fields/cgcloud__Meta_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Meta_Type__c</fullName>
    <description>Reference to the meta type of the complex pricing condition template.</description>
    <label>Meta Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>FixAmount</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>FreeGood</fullName>
            </value>
            <value>
                <fullName>LastVldVal</fullName>
            </value>
            <value>
                <fullName>Minimum</fullName>
            </value>
            <value>
                <fullName>Maximum</fullName>
            </value>
            <value>
                <fullName>Summation</fullName>
            </value>
            <value>
                <fullName>AddFreeItm</fullName>
            </value>
            <value>
                <fullName>FlatRate</fullName>
            </value>
            <value>
                <fullName>MultiBuy</fullName>
            </value>
            <value>
                <fullName>UserExit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>