force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Template__c/fields/cgcloud__Scale_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Scale_Type__c</fullName>
    <description>Specifies whether scale conditions will apply and, if Scale Type is not empty, how to interpret the scale.</description>
    <label>Scale Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>From</fullName>
            </value>
            <value>
                <fullName>To</fullName>
            </value>
            <value>
                <fullName>Graduated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>