force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Template__c/fields/cgcloud__Search_Strategy__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Search_Strategy__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Defines the search strategy of the calculation schema step.</description>
    <label>Search Strategy</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Search Strategy and the Pricing Condition Template must have the same Sales Org and Search Strategy must be active .</errorMessage>
        <filterItems>
            <field>cgcloud__CP_Search_Strategy__c.cgcloud__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>cgcloud__CP_Search_Strategy__c.cgcloud__Sales_Org__c</field>
            <operation>equals</operation>
            <valueField>$Source.cgcloud__Sales_Org__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__CP_Search_Strategy__c</referenceTo>
    <relationshipLabel>Pricing Condition Templates</relationshipLabel>
    <relationshipName>Pricing_Condition_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>