force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Template__c/fields/cgcloud__Sign__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sign__c</fullName>
    <description>Defines the leading sign of the condition values.</description>
    <label>Sign</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>+</fullName>
            </value>
            <value>
                <fullName>-</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>