force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Template__c/fields/cgcloud__Subtotal__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Subtotal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies which pricing templates are used for defining &apos;subtotal&apos; condition templates.</description>
    <label>Subtotal</label>
    <type>Checkbox</type>
</CustomField>