force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Template__c/recordTypes/cgcloud__Default.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Default</fullName>
    <active>true</active>
    <description>Default record type for Pricing Condition Template</description>
    <label>Default</label>
</RecordType>