force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Template__c/recordTypes/cgcloud__Rewards.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Rewards</fullName>
    <active>true</active>
    <description>Rewards record type for Pricing Condition Template</description>
    <label>Rewards</label>
</RecordType>