force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Template__c/validationRules/cgcloud__Check_if_manual_condition_is_defined.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_if_manual_condition_is_defined</fullName>
    <active>true</active>
    <description>If manual source attribute is defined, the manual field should also be checked.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(TEXT(cgcloud__Manual_Source_Attribute__c))), cgcloud__Manual__c = false)</errorConditionFormula>
    <errorMessage>Manual must be checked if the Manual Source Attribute is defined.</errorMessage>
</ValidationRule>