force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Template__c/validationRules/cgcloud__Group_Condition_Allowed_Distribute.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Group_Condition_Allowed_Distribute</fullName>
    <active>true</active>
    <errorConditionFormula>( cgcloud__Item_Grouping__c == true) &amp;&amp; cgcloud__Distribute_To_Item__c == true</errorConditionFormula>
    <errorMessage>Distribute to Item must be unchecked if the Item Grouping is checked.</errorMessage>
</ValidationRule>