force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Template__c/validationRules/cgcloud__Group_Condition_Allowed_Scale.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Group_Condition_Allowed_Scale</fullName>
    <active>true</active>
    <errorConditionFormula>( cgcloud__Item_Grouping__c == true) &amp;&amp; TEXT( cgcloud__Scale_Type__c ) != &apos;From&apos; &amp;&amp; TEXT(cgcloud__Scale_Type__c) != &apos;To&apos;</errorConditionFormula>
    <errorMessage>Scale Type must be &apos;From&apos; or &apos;To&apos; if the Item Grouping is checked.</errorMessage>
</ValidationRule>