force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Template__c/validationRules/cgcloud__Header_condition_allowed_Base.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Header_condition_allowed_Base</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL(cgcloud__Condition_Level__c, &apos;OrderHeader&apos;)) &amp;&amp;  TEXT(cgcloud__Base__c ) == &apos;Quantity&apos;</errorConditionFormula>
    <errorMessage>Base can&apos;t be &apos;Quantity&apos; if the Condition Level is &apos;Order Header&apos;.</errorMessage>
</ValidationRule>