force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Template__c/validationRules/cgcloud__Header_condition_allowed_groupping.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Header_condition_allowed_groupping</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL(cgcloud__Condition_Level__c, &apos;OrderHeader&apos;)) &amp;&amp;  cgcloud__Item_Grouping__c == true</errorConditionFormula>
    <errorMessage>Meta Type must be &apos;Percentage&apos;, &apos;Flat Rate&apos;, &apos;Summation&apos; or &apos;User Exit Only&apos; and Item Grouping must be unchecked if the Condition Level is &apos;Order Header&apos;.</errorMessage>
</ValidationRule>