force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Template__c/validationRules/cgcloud__Header_condition_allowed_metatypes.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Header_condition_allowed_metatypes</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL(cgcloud__Condition_Level__c, &apos;OrderHeader&apos;)) &amp;&amp; TEXT(cgcloud__Meta_Type__c) != &apos;Summation&apos; &amp;&amp; TEXT(cgcloud__Meta_Type__c) != &apos;Percentage&apos; &amp;&amp; TEXT(cgcloud__Meta_Type__c) != &apos;FlatRate&apos; &amp;&amp; TEXT(cgcloud__Meta_Type__c) != &apos;UserExit&apos;</errorConditionFormula>
    <errorMessage>Meta Type must be &apos;Percentage&apos;, &apos;Flat Rate&apos;, &apos;Summation&apos; or &apos;User Exit Only&apos; and Item Grouping must be unchecked if the Condition Level is &apos;Order Header&apos;.</errorMessage>
</ValidationRule>