force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Template__c/validationRules/cgcloud__Manual_condition_order_header_values.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Manual_condition_order_header_values</fullName>
    <active>true</active>
    <errorConditionFormula>(cgcloud__Manual__c == true &amp;&amp; ISPICKVAL(cgcloud__Condition_Level__c, &apos;OrderHeader&apos;)) &amp;&amp; TEXT(cgcloud__Meta_Type__c) != &apos;Percentage&apos; &amp;&amp; TEXT(cgcloud__Meta_Type__c) != &apos;FlatRate&apos;</errorConditionFormula>
    <errorMessage>Meta Type must be &apos;Percentage&apos;, &apos;Price&apos; or &apos;Flat Rate&apos; if the Manual is checked and the Conditional Level is &apos;Order Item&apos;. And Meta Type can&apos;t be &apos;Price&apos; if the Condition Level is &apos;Order Header&apos;.</errorMessage>
</ValidationRule>