force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Template__c/validationRules/cgcloud__Manual_condition_required_searchstrategy.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Manual_condition_required_searchstrategy</fullName>
    <active>true</active>
    <errorConditionFormula>(cgcloud__Manual__c != true &amp;&amp; cgcloud__Subtotal__c != true) &amp;&amp; cgcloud__Search_Strategy__c == null</errorConditionFormula>
    <errorMessage>Search Strategy can&apos;t be empty if the Manual and the Subtotal are uncheked.</errorMessage>
</ValidationRule>