force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Template__c/validationRules/cgcloud__record_type_cannot_be_modified.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__record_type_cannot_be_modified</fullName>
    <active>true</active>
    <description>The Record Type can&apos;t be edited after Pricing Condition Template creation.</description>
    <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED(  RecordTypeId ))</errorConditionFormula>
    <errorMessage>The Record Type can&apos;t be edited after Pricing Condition Template creation.</errorMessage>
</ValidationRule>