force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Template__c/validationRules/cgcloud__Scale_Type_Base_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Scale_Type_Base_Restriction</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(cgcloud__Scale_Type__c) != &apos;&apos; &amp;&amp;  TEXT(cgcloud__Base__c) == &apos;&apos;</errorConditionFormula>
    <errorMessage>The Base for Scale Type can&apos;t be empty.</errorMessage>
</ValidationRule>