force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Template__c/validationRules/cgcloud__Scale_Type_FromTo_Allowed_Metatypes.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Scale_Type_FromTo_Allowed_Metatypes</fullName>
    <active>true</active>
    <errorConditionFormula>(TEXT(cgcloud__Scale_Type__c) == &apos;From&apos; || TEXT(cgcloud__Scale_Type__c) == &apos;To&apos;)  &amp;&amp; TEXT(cgcloud__Meta_Type__c) != &apos;FixAmount&apos; &amp;&amp; TEXT(cgcloud__Meta_Type__c) != &apos;Percentage&apos; &amp;&amp; TEXT(cgcloud__Meta_Type__c) != &apos;FlatRate&apos; &amp;&amp; TEXT(cgcloud__Meta_Type__c) != &apos;AddFreeItm&apos; &amp;&amp; TEXT(cgcloud__Meta_Type__c) != &apos;Price&apos;</errorConditionFormula>
    <errorMessage>Meta Type must be &apos;Price&apos;, &apos;Amount&apos;, &apos;Add Free Item&apos;, &apos;Percentage&apos; or &apos;Flat Rate&apos; if the Scale Type is &apos;From&apos; or &apos;To&apos;.</errorMessage>
</ValidationRule>