force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Template__c/validationRules/cgcloud__Scale_Type_Graduated_Allowed_Metatypes.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Scale_Type_Graduated_Allowed_Metatypes</fullName>
    <active>true</active>
    <errorConditionFormula>(TEXT(cgcloud__Scale_Type__c) == &apos;Graduated&apos;) &amp;&amp; TEXT(cgcloud__Meta_Type__c) != &apos;FixAmount&apos; &amp;&amp; TEXT(cgcloud__Meta_Type__c) != &apos;Percentage&apos; &amp;&amp; TEXT(cgcloud__Meta_Type__c) != &apos;Price&apos;</errorConditionFormula>
    <errorMessage>Meta Type must be &apos;Price&apos;, &apos;Percentage&apos; or &apos;Amount&apos; if the Scale Type is &apos;Graduated&apos;.</errorMessage>
</ValidationRule>