force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Template__c/validationRules/cgcloud__Scale_Type_Graduated_Base_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Scale_Type_Graduated_Base_Restriction</fullName>
    <active>true</active>
    <errorConditionFormula>(TEXT(cgcloud__Scale_Type__c) == &apos;Graduated&apos;) &amp;&amp; (TEXT(cgcloud__Base__c) == &apos;Weight&apos; || TEXT(cgcloud__Base__c) == &apos;Volume&apos;)</errorConditionFormula>
    <errorMessage>Base can&apos;t be &apos;Weight&apos; or &apos;Volume&apos; if the Scale Type is &apos;Graduated&apos;.</errorMessage>
</ValidationRule>