force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Template__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Meta_Type__c</columns>
    <columns>cgcloud__Description__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>cgcloud__Active__c</columns>
    <columns>cgcloud__Condition_Level__c</columns>
    <columns>cgcloud__Manual__c</columns>
    <columns>cgcloud__Sort__c</columns>
    <columns>cgcloud__Sales_Org__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>